--- a/portfolio-page/home/home.css
+++ b/portfolio-page/home/home.css
@@ -2,18 +2,20 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+   
 }
-.home-page{
-
+body{
+    background-image: url('../img/bg-c.png');
+    
 }
 .navbar{
     display: flex;
     width: 100%;
-    background-color:slategray;
+    /* background-color:; */
     justify-content: center;
     height: 100px;
     align-items: center;
-    border: 2px solid lightgray;
+    /* border: 2px solid lightgray; */
     box-shadow: 5rem;
 }
 .left img{
@@ -39,4 +41,7 @@
 
 a:hover{
     color: red;
+}
+.body{
+   
 }
