--- a/portfolio-page/home/home.css
+++ b/portfolio-page/home/home.css
@@ -43,5 +43,31 @@ a:hover{
     color: red;
 }
 .body{
-   
+    display: flex;
+}
+.left-body{
+    width: 50%;
+}
+.right-body{
+    margin-top: 100px;
+    width: 50%;
+}
+button{
+    border: 2px solid white;
+    border-radius: 20px;
+    background-color: blue;
+    padding: 10px 15px;
+    margin-top: 20px;
+}
+button:hover{
+    border: 4px solid blue;
+}
+p{
+    margin-top: 10px;
+}
+h1{
+    font-size: 40px;
+}
+h3{
+    font-size: 25px;
 }
