--- a/portfolio-page/home/home.css
+++ b/portfolio-page/home/home.css
@@ -24,7 +24,8 @@ body{
 }
 .left{
     width: 34%;
-    
+    font-size: 20px;
+    padding-left: 30px;
 }
 .middle{
     width: 33%;
@@ -37,16 +38,19 @@ body{
 .right a{
     text-decoration: none; 
     color: black; 
+    font-size: 20px;
 }
 
 a:hover{
     color: red;
 }
 .body{
+    margin-top: 120px;
     display: flex;
 }
 .left-body{
     width: 50%;
+    padding-left: 100px;
 }
 .right-body{
     margin-top: 100px;
