--- a/portfolio-page/home/home.css
+++ b/portfolio-page/home/home.css
@@ -75,3 +75,14 @@ h1{
 h3{
     font-size: 25px;
 }
+footer{
+    padding: 15px;
+}
+i{
+    padding-inline: 15px;
+    font-size: 20px;
+}
+i:hover{
+    border: 2px solid blue;
+    border-radius: 10px;
+}
