--- a/portfolio-page/about/about.css
+++ b/portfolio-page/about/about.css
@@ -39,8 +39,34 @@ body{
     text-decoration: none; 
     color: black; 
     font-size: 20px;
+    
 }
+
 
 a:hover{
     color: red;
 } 
+.container{
+    display: flex;
+    width: 80%;
+    padding-top: 200px;
+    font-size: 20px;
+    margin-left: 300px;
+}
+.right{
+   
+    width: 50%;
+    padding-left: 20px;
+    justify-content: center;
+    align-items: center;
+}
+.left{
+    width: fit-content;
+    justify-content: center;
+    align-items: center;
+}
+h1{
+    color: blue;
+    padding-bottom: 20px;
+
+}
