--- a/portfolio-page/about/about.css
+++ b/portfolio-page/about/about.css
@@ -37,9 +37,8 @@ body{
 }
 .right a{
     text-decoration: none; 
-    color: black; 
+    color: blue; 
     font-size: 20px;
-    
 }
 
 
@@ -53,14 +52,14 @@ a:hover{
     font-size: 20px;
     margin-left: 300px;
 }
-.right{
+.right-body{
    
     width: 50%;
     padding-left: 20px;
     justify-content: center;
     align-items: center;
 }
-.left{
+.left-bod{
     width: fit-content;
     justify-content: center;
     align-items: center;
