--- a/calculator/home.css
+++ b/calculator/home.css
@@ -11,7 +11,7 @@
     display: flex;
 }
 .calculator{
-    background: red;
+    background: grey;
     padding: 20px;
     border-radius: 10px;
 }
@@ -21,5 +21,23 @@
     outline: 0;
     border: 0;
     border-radius: 10px;
+    background: transparent;
+    font-size: 20px;
+    cursor: pointer;
+    margin: 10px;
+    box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.1), 5px 5px 15px rgba(0, 0, 0, 0.5);
+}
+form .display{
+    display: flex;
+    justify-content: flex-end;
+    margin: 20px 0;
+}
+form .display input{
+    text-align: right;
+    flex: 1;
+    font-size: 45px;
     
+}
+form input.submit{
+    width: 145px;
 }
